--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "private": true,
   "workspaces": [
     "packages/**"
-  ]
+  ],
+  "scripts": {
+    "sync:in": "node syncin",
+    "sync:out": "node syncout"
+  }
 }
